--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
+    "paytmchecksum": "^1.5.1",
     "pdfkit": "^0.13.0",
     "razorpay": "^2.9.2",
     "router": "^1.3.8",
